# User-engagement

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile_db  LICENSE  README.md  cmd.sh  compose.yaml  init.sql  pyproject.toml  requirements.txt  user_engagement.yml
.github/workflows/: user_engagement.yml
db/: init.sql
devtools/: generate_dataset.py  generate_dataset_tools.py
frontend/: homepage.py
frontend/pages/: 1_Activity types (grouped).py  2_Activity types (over time).py  3_Purchases per login.py  4_Time spent per session.py
src/: __main__.py  application.py  models.py  test_main.py
test/: conftest.py  test_application.py  test_models.py  test_tools.py
tools/: ConnectionManager.py  db_operations.py  generate_dataset.py  generate_dataset_tools.py  shortcuts.py  tools.py
