[tool.poetry]
name = "user-engagement"
version = "0.1.0"
description = ""
authors = ["Francesco Pogliano <54809768+Cyangray@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
