[tool.poetry]
name = "user-engagement"
version = "0.1.0"
description = ""
authors = ["Francesco Pogliano <54809768+Cyangray@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pytest = "^8.3.3"
fastapi = {extras = ["standard"], version = "^0.115.2"}
uvicorn = {extras = ["standard"], version = "^0.32.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
