[tool.poetry]
name = "user-engagement"
version = "0.1.0"
description = ""
authors = ["Francesco Pogliano <54809768+Cyangray@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = {extras = ["standard"], version = "^0.115.2"}
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic-extra-types = "^2.9.0"
python-dotenv = "^1.0.1"
psycopg = {extras = ["binary"], version = "^3.2.3"}
pycountry = "^24.6.1"
faker = "^33.1.0"
pandas = "^2.2.3"
scipy = "^1.14.1"
matplotlib = "^3.9.3"
streamlit = "^1.41.0"
requests = "^2.32.3"
altair = "^5.5.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
